# parallel-fastapi-rq

./: docker-compose.yml  main.py  pyproject.toml  workers_db.py
