[tool.poetry]
name = "parallel-queue-fastapi-rq"
version = "0.1.0"
description = ""
authors = ["Gabriel Resende <gabriel.resende@terceiroslinx.com.br>"]
readme = "README.md"
packages = [{include = "parallel_queue_fastapi_rq"}]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.95.1"
rq = "^1.14.1"
uvicorn = "^0.22.0"
redis = "^4.5.5"
fastapi-utils = "^0.2.1"
ratelimit = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
